# mana

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile.in  Makefile.versions  README.md  SConstruct  VERSION  bldlog_configure.txt  bldlog_craypkg_gen.txt  bldlog_make.txt  bldlog_make_clean.txt  bldlog_make_install.txt  bldlog_module_avail_gcc.txt  bldlog_module_list.txt  compile-coord-cori.sh  configure  configure-mana  configure-mana.patch  configure.ac  dmtcp_mtcp_restart.patch  dmtcp_skip_heap.patch  ds.h  fftw_testing.cpp  mkl_testing.cpp  sbatch-sw4-bug
auto_script/: README.md  mana_run.script
ci/: unit-test.sh
contrib/: Makefile.in
doc/: RUN_MANA_ON DISCOVERY.txt  centos-tutorial.txt  mana-centos-tutorial.txt  mana-centos7-tutorial.txt  mana-install-instruction-on-engage.txt
include/: config.h.in  dmtcp.h.in  dmtcpalloc.h  procmapsarea.h  procselfmaps.h  protectedfds.h  shareddata.h  virtualidtable.h
jalib/: jalloc.cpp  jassert.cpp
manpages/: Makefile  Makefile.in  README  mana.1  mana.1.md  mana.latex2man
mpi-proxy-split/: .gitignore  Makefile  Makefile_config.in  NOTES  README  README-obsolete.md  README.md  async_comm.cpp  async_comm.h  autotest.py  cartesian.h  dmtcp_dlsym.h  logger.cpp  logger.h  mana_coord_proto.h  mana_header.h  mpi_files.h  mpi_plugin.cpp  mpi_plugin.h  mtcp_split_process.c  mtcp_split_process.h  p2p_drain_send_recv.cpp  p2p_drain_send_recv.h  p2p_log_replay.cpp  p2p_log_replay.h  record-replay.cpp  record-replay.h  seq_num.cpp  seq_num.h  split_process.cpp  split_process.h  two-phase-algo.cpp  two-phase-algo.h  uh_wrappers.cpp  uh_wrappers.h  virtual-ids.cpp  virtual-ids.h  virtual_id.cpp  virtual_id.h  window.h
plugin/: Makefile.in
restart_plugin/: Makefile.in  README  README-old  dmtcp_restart_plugin.cpp  lower_half_api.h  mtcp_restart_plugin.c  mtcp_restart_plugin.h  mtcp_split_process.c  mtcp_split_process.h
scripts/: README.md  mana_coordinator.sh  tidy.sh
src/: Makefile.am  Makefile.in  barrierinfo.h  coordinatorapi.cpp  dmtcp_command.cpp  dmtcp_coordinator.cpp  dmtcp_coordinator.h  dmtcp_dlsym.cpp  dmtcp_launch.cpp  dmtcp_restart.cpp  dmtcpmessagetypes.cpp  dmtcpmessagetypes.h  dmtcpworker.cpp  dmtcpworker.h  lookup_service.cpp  lookup_service.h  mana_coordinator.sh  mana_launch.sh  mana_restart.sh  mana_status.sh  plugininfo.cpp  plugininfo.h  pluginmanager.cpp  pluginmanager.h  processinfo.cpp  processinfo.h  procselfmaps.cpp  shareddata.cpp  siginfo.h  (+6 more)
(+359 files in other folders)
